infra/manifest/devops/overlays/dev/test-app-gateway-v1/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: test-admin-gateway
spec:
  gatewayClassName: gke-l7-gxlb  
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "test-admin.test.dev.com"
    tls:
      mode: Terminate
      options:
        networking.gke.io/pre-shared-certs: test-admin-test-dev-com
    allowedRoutes:
      namespaces:
        from: Same
  addresses:   
  - type: NamedAddress
    value: devops-dev-cluster-1-30-5-test-admin-static-ip

---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: test-admin-httproute
spec:
  parentRefs:
  - name: dev-test-admin-gateway  
  hostnames:
  - "test-admin.test.dev.com" 
  rules:
  - matches:
    - path:
        value: "/"  
    backendRefs:
    - name: dev-test-admin-service
      port: 80  

---

apiVersion: v1
kind: Service
metadata:
  name: test-admin-service  
  annotations:
    cloud.google.com/neg: '{"exposed_ports":{"80":{}}}'
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: test-admin-1
